# ipyautoui

./: .buildinfo  .codacy.yml  .coveragerc  .env  .gitattributes  .gitignore  .travis.yml  CHANGELOG.html  CONTRIBUTING.html  CONTRIBUTING.md  LICENSE  README.ipynb  README.md  api.html  appveyor.yml  autodisplay.html  autoui.html  autovuetify.html  buttonbar_extended.html  conda-build.sh  custom-renderers.html  demo.html  edit_tsv_widgets.html  editgrid.html  edittsv-widgets.html  environment-dev.yml  environment.yml  genindex.html  index.html  intro.html  issue-17.html  issue-178.html  issue-330.html  issue-332.html  issue-334.html  issue-336.html  junit.xml  jupytext_create_notebooks.sh  jupytext_sync_notebooks.sh  maplocal_example.py  (+15 more)
.circleci/: config.yml
.devcontainer/: Dockerfile  devcontainer.json
.doctrees/: autodisplay.doctree  autoui.doctree  autovuetify.doctree  buttonbar_extended.doctree  custom-renderers.doctree  demo.doctree  editgrid.doctree  environment.pickle  intro.doctree  issue-17.doctree  issue-178.doctree  issue-330.doctree  issue-332.doctree  issue-334.doctree  issue-336.doctree  validation.doctree
.doctrees/reference/: pydantic-jsonschema-mapping.doctree
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  refactor_maintainence.md
.github/workflows/: deploy-book.yml  pypi-publish.yml  test-and-lint.yml  test-python-package.yml
.zed/: settings.json
_modules/: index.html
_modules/ipyautoui/: _dev_sys_path_append.html  _utils.html  _utils_debounce.html  autoanyof.html  autobox.html  autodisplay.html  autodisplay_renderers.html  autoform.html  automapschema.html  autoobject.html  autoui.html  autovjsf.html  basemodel.html  constants.html  demo.html  env.html  mydocstring_display.html  nullable.html
_modules/ipyautoui/custom/: autogrid.html  buttonbars.html  date_string.html  decision_branch.html  editgrid.html  filechooser.html  filesindir.html  fileupload.html  halo_decorator.html  iterable.html  loadproject.html  markdown_widget.html  modelrun.html  multi_toggle_buttons.html  multiselect_search.html  outputlogging.html  selectandclick.html  selectdir.html  showhide.html  showopenurl.html  title_description.html  urlimagelink.html  widgetcaller_error.html  workingdir.html
_sources/: autodisplay.ipynb  autoui.ipynb  autovuetify.ipynb  custom-renderers.ipynb  demo.ipynb  editgrid.ipynb  intro.md  issue-178.ipynb  issue-336.ipynb
_sources/autoapi/: index.rst
_sources/autoapi/ipyautoui/: index.rst
autoapi/: index.html
autoapi/ipyautoui/: index.html
binder/: environment.yml
conda.recipe/: conda_build_config.yaml  meta.yaml
docs/: CHANGELOG.md  CONTRIBUTING.qmd  EditableGrid.csv  EditableGridTransposed.csv  README.txt  TestArrayTransposed.xlsx  __init__.py  _config.yml  _quarto.yml  _toc.yml  api.rst  autodisplay.ipynb  autodisplay.qmd  autoui-simple.ipynb  autoui.ipynb  autoui.qmd  autoui_mapping.csv  autovuetify.ipynb  autovuetify.qmd  buttonbar_extended.ipynb  check-autoreacton.ipynb  conf.py  crop_logo.py  custom-renderers.ipynb  demo.ipynb  demo.qmd  digital-schedules-issue.py  digital-schedules-phantom-changes-issue.py  edit_tsv_widgets.ipynb  editgrid.ipynb  editgrid.qmd  edittsv-widgets.ipynb  edittsv-widgets.qmd  environment.yml  generate-model-file.py  import-export-io-test.py  index.qmd  index.rst  int-enum-issue.py  intro.ipynb  (+15 more)
docs/images/: favicon.3dm  logo.3dm  logo.3dmbak
docs/reference/: pydantic-jsonschema-mapping.ipynb
examples/: eg_autoui.ipynb  eg_displayfile.ipynb  eg_iterable.ipynb  simple_test.aui.json  test.aui.json  tutorial-autoui.ipynb  tutorial-displayfile.ipynb  tutorial-iterable.ipynb
ipyautoui/: _auto_logic.py  _custom_widgets.py  autoui.ipynb  autoui.py  autoui_mapping.csv  constants.py  multiselect_dropdown.ipynb  multiselect_dropdown.py  test_autoui_data.py  tests.ipynb  tests.py  widget_type_strings.ipynb  wip_multiselect_dropdown.ipynb
reference/: pydantic-jsonschema-mapping.html
site_libs/bootstrap/: bootstrap-98d7fd0d0baa338e2a9c04f9f26d9607.min.css  bootstrap-9bb6838e4aeb7ceb4da9facbe624b6f5.min.css  bootstrap-ad5de3c7c40e159339e102b8f41bc68a.min.css  bootstrap-dark-2fd4d0b5363630477c2b3927a03935df.min.css  bootstrap-dark-7ae19b44b7f3f1fbc358920b297f498b.min.css  bootstrap-dark-e7a0a05fd6c3d2018d7dc2b854596068.min.css
src/: __init__.py
src/ipyautoui/: __init__.py  _auto_logic.py  _custom_widgets.py  _dev_maplocal_params.py  _dev_sys_path_append.py  _ipydisplayfile.ipynb  _ipydisplayfile.py  _utils.py  _utils_debounce.py  _version.py  autoanyof.py  autobox.py  autodisplay.py  autodisplay_renderers.py  autodisplayfile_renderers.py  autoform.py  autoform_layout.py  autoipywidget.py  automapschema.py  automapschema.yaml  autoobject.py  autoreacton.py  autoui.ipynb  autoui.py  autoui_mapping.csv  autoui_mapping.xlsx  autovjsf.py  autowidgets.py  basemodel.py  constants.py  demo.py  displayfile.py  displayfile_renderers.py  env.py  jupytext.toml  multiselect_dropdown.ipynb  multiselect_dropdown.py  mydocstring_display.py  nullable.py  test_autoui_data.py  (+6 more)
tests/: 06667-MXF-XX-XX-SH-M-20003-header.md  06667-MXF-XX-XX-SH-M-20003.docheader.json  __init__.py  constants.py  example_objects.py  instance_spec.json  run_automapschema.py  test_autoform.py  test_autogrid.py  test_autoipywidget.py  test_automapschema.py  test_autoobject.py  test_autoui.py  test_autovjsf.py  test_custom.py  test_data.py  test_datamodel_codegen.py  test_demo.py  test_demo_schemas.py  test_docs.py  test_doctest.py  test_editgrid.py  test_editgridschema.py  test_env.py  test_maplocal_openfile.py  test_utils.py
tests/.ipynb_checkpoints/: test_autoui-checkpoint.py
tests/custom/: test_buttonbars.py  test_edittsv.py  test_edittsv_with_diff_and_key_mapping.py  test_executetasks.py  test_filechooser.py  test_fileupload.py  test_savebuttonbar.py
tests/filetypes/: eg_csv.csv  eg_gbxml.xml  eg_json.json  eg_md.md  eg_plotly.plotly  eg_py.py  eg_short_csv.csv  eg_txt.txt  eg_xlsx.xlsx  eg_xlsxtemplated.xt.xlsx
tests/test_data/: edit-grid-file-data.json
tests/testdata/: test.aui.json  test_auto_read_file.json
(+220 files in other folders)
