[build-system]
requires = ["hatchling>=1.10.0", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "ipyautoui"
dynamic = ["version"]
description = "wrapper that sits on top of ipywidgets and other ipy widget libraries to template / automate the creation of widget forms. Uses pydantic to create defined data-container and serialisation to JSON. Includes example patterns for adding new custom widgets."
readme = "README.md"
authors = [{ name = "John Gunstone", email = "gunstone.john@gmail.com" }]
keywords = ["ipyautoui"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "immutables",
    "ipython",
    "ipywidgets>8",
    "jupyterlab>=4.2",
    "ipydatagrid>=1.3.2", #312
    "ipyfilechooser", # make optional
    "ipyvuetify", # make optional
    "markdown",
    "jsonref",
    "numpy",
    "openpyxl",
    "pandas",
    "pydantic>=2",
    "pydantic-settings",
    "pydantic-extra-types",
    "PyYAML",
    "stringcase",
    "wcmatch",
]
[project.optional-dependencies]
tests = [
  "pytest",
  "maplocal==0.2.1",
  "pytest_examples"
]

[project.urls]
Homepage = "https://github.com/maxfordham/ipyautoui"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/ipyautoui/_version.py"

[tool.hatch.build.targets.sdist]
include = ["/src/ipyautoui"]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
ipyautoui = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
tests = { features = ["tests"], solve-group = "default" }

[tool.pixi.tasks]

[tool.pixi.feature.tests.tasks]
tests = "pytest"
# check = "ruff check"
# fix = "ruff check --fix --select I"
# format = "ruff format"