
[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[project]
name = "ipyautoui"
dynamic = ["version"]
description = "wrapper that sits on top of ipywidgets and other ipy widget libraries to template / automate the creation of widget forms. Uses pydantic to create defined data-container and serialisation to JSON. Includes example patterns for adding new custom widgets."
readme = "README.md"
authors = [{ name = "John Gunstone", email = "gunstone.john@gmail.com" }]
keywords = ["ipyautoui"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "immutables",
    "ipython",
    "ipywidgets>8",
    "jupyterlab>=4.2",
    "ipydatagrid>=1.4", #312
    "ipyfilechooser", # make optional
    "ipyvuetify", # make optional
    "markdown",
    "jsonref",
    "numpy",
    "openpyxl",
    "pandas",
    "pydantic>=2",
    "pydantic-settings",
    "pydantic-extra-types",
    "PyYAML",
    "stringcase",
    "wcmatch",
]


[project.urls]
Homepage = "https://github.com/maxfordham/ipyautoui"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/ipyautoui/_version.py"

[tool.hatch.build.targets.sdist]
include = ["/src/ipyautoui"]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
ipyautoui = { path = ".", editable = true }

[tool.pixi.feature.tests.pypi-dependencies]
pytest_examples = "*"

[tool.pixi.feature.tests.dependencies]
pytest = "*"
# maplocal= "0.2.1"
hatch = "*"

[tool.pixi.feature.dev.pypi-dependencies]
jupyterlab-quarto = "*"

[tool.pixi.feature.dev.dependencies]
jupyterlab = "*"
jupytext = "*"
voila = "*"
notebook_intelligence = "*"
quarto = ">=1.6.40,<2"

[tool.pixi.feature.docs.dependencies]
quarto = ">=1.6.40,<2"

[tool.pixi.environments]
tests = {features = ["tests"]}
docs = {features = ["docs"]}
dev = {features = ["dev"], solve-group = "tests"}

[tool.pixi.tasks]

[tool.pixi.feature.tests.tasks]
tests = "pytest"
check = "ruff check"
build = "hatch build"

[tool.pixi.feature.dev.tasks]
demo = "voila docs/demo.qmd" # TODO: make this work
jlab = "jupyter lab"

[tool.pixi.feature.docs.tasks]
build-docs = { cmd = "quarto render .", cwd = "docs" }
preview-docs = { cmd = "quarto preview .", cwd = "docs" }

