
[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[project]
name = "ipyautoui"
dynamic = ["version"]
license = "BSD-3-Clause"
requires-python = ">=3.8,<3.14"
license-files = ["licenses/BSD-3-Clause.txt"]
description = "wrapper that sits on top of ipywidgets and other ipy widget libraries to template / automate the creation of widget forms. Uses pydantic to create defined data-container and serialisation to JSON. Includes example patterns for adding new custom widgets."
readme = "README.md"
authors = [{ name = "John Gunstone", email = "gunstone.john@gmail.com" }]
maintainers = [
  { name = "John Gunstone", email = "gunstone.john@gmail.com" },
  { name = "Olly Hensby", email = "o.hensby@maxfordham.com" },
]
keywords = ["ipyautoui", "ui", "ipywidgets", "pydantic", "jsonschema", "form"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "immutables",
    "ipython",
    "ipywidgets>8",
    "ipydatagrid==1.3.2",
    "ipyfilechooser",       # make optional
    "ipyvuetify",           # make optional
    "markdown",
    "jsonref",
    "numpy",
    "openpyxl",
    "requests",
    "pandas",
    # "casefy",
    "pydantic>=2",
    "pydantic-settings",
    "pydantic-extra-types",
    "PyYAML",
    "wcmatch", 
    "deepdiff",
    "datamodel-code-generator>=0.28.5",
    "xlsxdatagrid>=0.3.2,<0.4",
]

[project.urls]
Homepage = "https://github.com/maxfordham/ipyautoui"
Documentation = "https://maxfordham.github.io/ipyautoui/"
Issues = "https://github.com/maxfordham/ipyautoui/issues"
Changelog = "https://github.com/maxfordham/ipyautoui/releases"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/ipyautoui/_version.py"

[tool.hatch.build.targets.sdist]
include = ["/src/ipyautoui"]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
ipyautoui = { path = ".", editable = true }

[tool.pixi.feature.tests.pypi-dependencies]
pytest_examples = "*"

[tool.pixi.feature.tests.dependencies]
pytest = "*"
hatch = "*"
casefy = "*"

[tool.pixi.feature.dev.pypi-dependencies]
jupyterlab-quarto = "*"

[tool.pixi.feature.dev.dependencies]
jupyterlab = "*"
jupytext = "*"
voila = "*"
notebook_intelligence = "*"
jupyterlab-search-replace = "*"
quarto = ">=1.6.40,<2"

[tool.pixi.feature.docs.dependencies]
jupyterlab = "*"
quarto = ">=1.6.40,<2"

[tool.pixi.environments]
tests = { features = ["tests"] }
docs = { features = ["docs"] }
dev = { features = ["dev"], solve-group = "tests" }

[tool.pixi.tasks]

[tool.pixi.feature.tests.tasks]
tests = "pytest"
check = "ruff check"
build = "hatch build"

[tool.pixi.feature.dev.tasks]
demo = "voila docs/demo.ipynb"
jlab = "jupyter lab"

[tool.pixi.feature.docs.tasks]
build-docs = { cmd = "quarto render .", cwd = "docs" }
preview-docs = { cmd = "quarto preview .", cwd = "docs" }
open-docs = {cmd="/mnt/c/windows/explorer.exe index.html", cwd="docs/_site"} # this will only work on WSL
